# primes-cpp

./: CMakeLists.txt  main.cpp
include/: CMakeLists.txt  primes.cpp  primes.hpp
